--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
     <title>Boilermaker</title>
     <link rel="stylesheet" href="/style.css" />
+    <link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
     <link rel="stylesheet" href="https://unpkg.com/react-vis/dist/style.css">
+    
     <script defer src="/bundle.js"></script>
   </head>
   <body>
