--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>TrafficTracker</title>
     <link rel="stylesheet" href="/style.css" />
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/favicon.ico" type="image/x-icon"> 
     <link rel="stylesheet" href="https://unpkg.com/react-vis/dist/style.css">
