--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/favicon.ico" type="image/x-icon"> 
     <link rel="stylesheet" href="https://unpkg.com/react-vis/dist/style.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="/w3css/3/w3.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <script defer src="/bundle.js"></script>
   </head>
   <body>
